--- a/app/contact.html
+++ b/app/contact.html
@@ -52,21 +52,59 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
+	<main class="main">
+	<div class="container">
+        <div class="contact">
+            <div class="angebot-item">Kontakt</div>
+            <h1>Fragen zu unseren Angeboten?</h1>
+            <div class="contact-text">Gerne geben wir Ihnen persönlich detaillierte Auskünfte zu unseren Angeboten oder beraten Sie telefonisch zu Ihrem Anliegen. Zögern Sie nicht uns zu kontaktieren!</div>
+            <div class="row">
+                <div class="col-6 contact-block-left">
+                    <div class="contact-block-content">
+                        <h2>inAut GmbH</h2>
+                        <p>Waldstätterstrasse 3 6003 Luzern</p>
+                    </div>
+                    <div>
+                        <div class="angebot-item search-missions-article">hre Ansprechperson:</div>
+                        <div class="contact-block-left-text">Manuela Allemann (Sekretariat)</div>
+                    </div>
+                </div>
+                <div class="col-6 contact-block-right">
+                    <div class="contact-block-content">
+                        <div>Telefon <a href="tel:+41 79 242 53 53 ">+41 79 242 53 53 </a></div>
+                        <div>E-Mail <a href="malito:info@inaut.ch">info@inaut.ch</a></div>
+                    </div>
+                    <div>
+                        <div class="angebot-item search-missions-article">Für schützenswerte Dokumente:</div>
+                        <div>E-Mail <a href="malito:inaut@hin.ch">inaut@hin.ch</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="line-dec">
+            <div class="line-dec-content"></div>
+        </div>
+
+        <div class="contact-map">
+            <img src="img/map.png" alt="img">
+        </div>
+    </div>
+</main>
+<!-- <main class="main search-missions">
 	<div class="container search-missions-container">
         <div class="search-missions-way">
             <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Suche eines Ausbildungsplatzes</a>
+            <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="#">Unterstützung im Arbeitsalltag</a>
         </div>
         <div class="search-missions-item">
             <div class="search-missions-image">
-                <img src="img/svg/scoolm.svg" alt="img">
+                <img src="img/svg/setim.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Suche eines Ausbildungsplatzes</div>
+            <div class="angebot-item search-missions-article">Unterstützung im Arbeitsalltag</div>
         </div>
-        <h1>Vollumfängliche Unterstützung für den erfolgreichen Lehrabschluss</h1>
-        <div class="angebot-text search-text">inAut hilft bei der Erstellung des Bewerbungsdossiers, organisiert die für die Ausbildung obligatorischen Tests (z.B. Multi-Check) in einem angepassten Rahmen, akquiriert entsprechende Arbeitgeber und begleitet Sie zu den Vorstellungsgesprächen.</div>
+        <h1>inAut berät Sie und Ihre Firma kompetent und bedarfsgerecht</h1>
+        <div class="angebot-text search-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -83,7 +121,7 @@
             <div class="search-missions-text">Zurück</div>
         </div>
     </div>
-</main>
+</main> -->
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
