--- a/app/hire-person.html
+++ b/app/hire-person.html
@@ -41,7 +41,7 @@
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
 				<li><a href="jobs.html">Jobs</a></li>
-				<li><a href="#"> Kontakt</a></li>
+				<li><a href="contact.html"> Kontakt</a></li>
 			</ul>
 			<div class="burger d-lg-none">
 				<span></span>
