--- a/app/_home.html
+++ b/app/_home.html
@@ -82,7 +82,7 @@
 		</div> -->
 	</div>
 	<div class="container">
-		<div class="decor"></div>
+		<!-- <div class="decor"></div> -->
 		<div class="description">
 			<div>Die inAut GmbH unterstützt im Auftrag der IV und anderer </div>
 			<div>zuweisender Stellen neurodiverse Menschen</div>
@@ -196,11 +196,9 @@
 					<div class="home-title">Hans Muster, Winterthur</div>
 				</div>
 				<div class="home-title current-title">Unsere Kunden</div>
-				<div class="our-customers-block">
-					<div class="our-customers-content img-cover markus">
-						<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
-						<div class="home-title">Markus Löffel, Gerber macht’s</div>
-					</div>
+				<div class="our-customers-content markus">
+					<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
+					<div class="home-title">Markus Löffel, Gerber macht’s</div>
 				</div>
 				<div class="home-title current-title">Unsere Kunden</div>
 				<div class="our-customers-content img-cover">
