--- a/app/angebot.html
+++ b/app/angebot.html
@@ -53,7 +53,7 @@
 	</div>
 </header>
 	<main class="main angebot">
-	<div class="container home">
+	<div class="container angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/sk_an.png" alt="img">
         </div>
