--- a/app/angebot.html
+++ b/app/angebot.html
@@ -68,7 +68,7 @@
 
         <div class="angebot-block">
             <div class="row">
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/nose.svg" alt="img">
                     </div>
@@ -76,7 +76,7 @@
                     <div class="angebot-text angebot-block-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich gelebt werden.</div>
                     <a class="general-link" href="search-of-trial-missions.html">zum Angebot</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/scool.svg" alt="img">
                     </div>
@@ -84,7 +84,7 @@
                     <div class="angebot-text angebot-block-text">Von der Suche auf Online-Plattformen, über Bewerbungen erstellen bis zum Begleiten an Vorstellungsgespräche - inAut unterstützt Sie individuell.</div>
                     <a class="general-link" href="job-search.html">zum Angebot</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/find.svg" alt="img">
                     </div>
@@ -92,7 +92,7 @@
                     <div class="angebot-text angebot-block-text">Ein massgeschneidertes Stellenprofil,  gezieltes Kommunikationstraining gepaart mit unserem Netzwerk führen Sie zum Erfolg.</div>
                     <a class="general-link" href="looking-job.html">zum Angebot</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/family.svg" alt="img">
                     </div>
@@ -100,7 +100,7 @@
                     <div class="angebot-text angebot-block-text">Eine Ausbildung birgt viele Höhen, aber auch Tiefen. Wir unterstützen Lernende sowie Arbeitgeber/innen auf dem Weg zum erfolgreichen Abschluss. </div>
                     <a class="general-link" href="coaching-training.html">zum Angebot</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/apt.svg" alt="img">
                     </div>
@@ -108,7 +108,7 @@
                     <div class="angebot-text angebot-block-text">Oft ist es schwierig, anhand ein bis zwei Schnuppertagen zu entscheiden, welcher der richtige Beruf ist. Eine Abklärung ist viel aufschlussreicher.</div>
                     <a class="general-link" href="professional-clarification.html">zum Angebot</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/comp.svg" alt="img">
                     </div>
