--- a/app/_about-us.html
+++ b/app/_about-us.html
@@ -1,5 +1,5 @@
 <main class="main angebot">
-	<div class="container home">
+	<div class="container angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/docms.png" alt="img">
         </div>
@@ -41,7 +41,7 @@
        <div class="our-team">
            <div class="home-title current-title">Unser Team</div>
            <div class="row">
-               <div class="col-6 our-team-indent our-team-left">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -61,7 +61,7 @@
                         <a href="malito:natascha.nikolic@inaut.ch">natascha.nikolic@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
@@ -81,7 +81,7 @@
                     <a href="malito:annemarie.weber@inaut.ch">annemarie.weber@inaut.ch</a>
                 </div>
                 </div>
-                <div class="col-6 our-team-indent our-team-left">
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -101,7 +101,7 @@
                         <a href="malito:renate.perrin@inaut.ch">renate.perrin@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
@@ -121,7 +121,7 @@
                     <a href="malito:marianne.moser@inaut.ch">marianne.moser@inaut.ch</a>
                 </div>
                 </div>
-                <div class="col-6 our-team-indent our-team-left">
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block our-team-bg">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -141,7 +141,7 @@
                         <a href="malito:cornelia.pfister@inaut.ch">cornelia.pfister@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
@@ -162,7 +162,7 @@
                     <a href="malito:manuela.alleman@inaut.ch">manuela.alleman@inaut.ch</a>
                 </div>
                 </div>
-                <div class="col-6 our-team-indent our-team-left">
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block our-team-martina">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -180,7 +180,7 @@
                         <a href="malito:martina.keller@inaut.ch">martina.keller@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block our-team-alexandra">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
