--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -1,5 +1,5 @@
 <main class="main angebot">
-	<div class="container home">
+	<div class="container angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/bildf.png" alt="img">
         </div>
@@ -14,7 +14,7 @@
 
         <div class="angebot-block">
             <div class="row">
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/chair.svg" alt="img">
                     </div>
@@ -22,7 +22,7 @@
                     <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
                     <a class="general-link" href="hire-person.html">mehr Erfahren</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/setm.svg" alt="img">
                     </div>
@@ -30,7 +30,7 @@
                     <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
                     <a class="general-link" href="support-in-everyday-work.html">mehr Erfahren</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/shapm.svg" alt="img">
                     </div>
