--- a/app/about-us.html
+++ b/app/about-us.html
@@ -53,7 +53,7 @@
 	</div>
 </header>
 	<main class="main angebot">
-	<div class="container home">
+	<div class="container angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/docms.png" alt="img">
         </div>
@@ -95,7 +95,7 @@
        <div class="our-team">
            <div class="home-title current-title">Unser Team</div>
            <div class="row">
-               <div class="col-6 our-team-indent our-team-left">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -115,7 +115,7 @@
                         <a href="malito:natascha.nikolic@inaut.ch">natascha.nikolic@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
@@ -135,7 +135,7 @@
                     <a href="malito:annemarie.weber@inaut.ch">annemarie.weber@inaut.ch</a>
                 </div>
                 </div>
-                <div class="col-6 our-team-indent our-team-left">
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -155,7 +155,7 @@
                         <a href="malito:renate.perrin@inaut.ch">renate.perrin@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
@@ -175,7 +175,7 @@
                     <a href="malito:marianne.moser@inaut.ch">marianne.moser@inaut.ch</a>
                 </div>
                 </div>
-                <div class="col-6 our-team-indent our-team-left">
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block our-team-bg">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -195,7 +195,7 @@
                         <a href="malito:cornelia.pfister@inaut.ch">cornelia.pfister@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
@@ -216,7 +216,7 @@
                     <a href="malito:manuela.alleman@inaut.ch">manuela.alleman@inaut.ch</a>
                 </div>
                 </div>
-                <div class="col-6 our-team-indent our-team-left">
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
                     <div class="our-team-block our-team-martina">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
@@ -234,7 +234,7 @@
                         <a href="malito:martina.keller@inaut.ch">martina.keller@inaut.ch</a>
                     </div>
                </div>
-               <div class="col-6 our-team-indent our-team-right">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
                 <div class="our-team-block our-team-alexandra">
                     <div class="our-team-content">
                         <ul class="our-team-ul">
@@ -285,27 +285,27 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Angebot</a>
+                            <a href="angebot.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Für Unternehmen</a>
+                            <a href="for-companies.html">Für Unternehmen</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Über uns</a>
+                            <a href="about-us.html">Über uns</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Aktuelles</a>
+                            <a href="current.html">Aktuelles</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Jobs</a>
+                            <a href="jobs.html">Jobs</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Kontakt</a>
+                            <a href="contact.html">Kontakt</a>
                         </li>
                     </ul>
                     <!-- <div class="footer-block">
