--- a/app/job-description.html
+++ b/app/job-description.html
@@ -135,27 +135,27 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Angebot</a>
+                            <a href="angebot.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Für Unternehmen</a>
+                            <a href="for-companies.html">Für Unternehmen</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Über uns</a>
+                            <a href="about-us.html">Über uns</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Aktuelles</a>
+                            <a href="current.html">Aktuelles</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Jobs</a>
+                            <a href="jobs.html">Jobs</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Kontakt</a>
+                            <a href="contact.html">Kontakt</a>
                         </li>
                     </ul>
                     <!-- <div class="footer-block">
