--- a/app/for-companies.html
+++ b/app/for-companies.html
@@ -53,7 +53,7 @@
 	</div>
 </header>
 	<main class="main angebot">
-	<div class="container home">
+	<div class="container angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/bildf.png" alt="img">
         </div>
@@ -68,7 +68,7 @@
 
         <div class="angebot-block">
             <div class="row">
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/chair.svg" alt="img">
                     </div>
@@ -76,7 +76,7 @@
                     <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
                     <a class="general-link" href="hire-person.html">mehr Erfahren</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/setm.svg" alt="img">
                     </div>
@@ -84,7 +84,7 @@
                     <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
                     <a class="general-link" href="support-in-everyday-work.html">mehr Erfahren</a>
                 </div>
-                <div class="col-4 angebot-block-content">
+                <div class="col-12 col-sm-4 angebot-block-content">
                     <div class="angebot-block-img">
                         <img src="img/svg/shapm.svg" alt="img">
                     </div>
@@ -141,27 +141,27 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Angebot</a>
+                            <a href="angebot.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Für Unternehmen</a>
+                            <a href="for-companies.html">Für Unternehmen</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Über uns</a>
+                            <a href="about-us.html">Über uns</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Aktuelles</a>
+                            <a href="current.html">Aktuelles</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Jobs</a>
+                            <a href="jobs.html">Jobs</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="#">Kontakt</a>
+                            <a href="contact.html">Kontakt</a>
                         </li>
                     </ul>
                     <!-- <div class="footer-block">
