--- a/app/_contact.html
+++ b/app/_contact.html
@@ -5,7 +5,7 @@
             <h1>Fragen zu unseren Angeboten?</h1>
             <div class="contact-text">Gerne geben wir Ihnen persönlich detaillierte Auskünfte zu unseren Angeboten oder beraten Sie telefonisch zu Ihrem Anliegen. Zögern Sie nicht uns zu kontaktieren!</div>
             <div class="row">
-                <div class="col-6 contact-block-left">
+                <div class="col-12 col-sm-6 contact-block-left">
                     <div class="contact-block-content">
                         <h2>inAut GmbH</h2>
                         <p>Waldstätterstrasse 3 6003 Luzern</p>
@@ -15,7 +15,7 @@
                         <div class="contact-block-left-text">Manuela Allemann (Sekretariat)</div>
                     </div>
                 </div>
-                <div class="col-6 contact-block-right">
+                <div class="col-12 col-sm-6 contact-block-right">
                     <div class="contact-block-content">
                         <div>Telefon <a href="tel:+41 79 242 53 53 ">+41 79 242 53 53 </a></div>
                         <div>E-Mail <a href="malito:info@inaut.ch">info@inaut.ch</a></div>
