--- a/app/current.html
+++ b/app/current.html
@@ -61,7 +61,7 @@
         <div class="angebot-text search-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
         <div class="news text-p">
             <div class="news-left">
-                <img src="img/kursaalbern_aussenansicht.png" alt="img">
+                <img class="news-left-img" src="img/kursaalbern_aussenansicht.png" alt="img">
             </div>
             <div class="news-right">
                 <div class="angebot-item">Natascha Nikolic, 4. August 2021</div>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="news-content">
-            <div class="news-left">
+            <div class="news-left news-left-block">
                 <img src="img/angular.png" alt="img">
                 <div class="news-card">
                     <div class="angebot-item">Res Kocher, 20. Mai 2021</div>
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="news-left">
+            <div class="news-left news-left-block">
                 <img src="img/wdr.png" alt="img">
                 <div class="news-card">
                     <div class="angebot-item">WDR, 22. Juni 2021</div>
