--- a/app/_home.html
+++ b/app/_home.html
@@ -33,26 +33,16 @@
 				</div>
 			  </div>
 			</div>
-			<div class="swiper-button-next"></div>
-			<div class="swiper-button-prev"></div>
-			<div class="swiper-pagination"></div>
-			<div>
-			</div>
-			<!-- Add Pagination -->
-			<!-- <div class="swiper-block d-flex">
-				<div class="swiper-pagination test ml-5"></div>
-				<div class="swiper-pagination test ml-5"></div>
-				<div class="swiper-pagination test ml-5"></div>
-			</div> -->
-			<!-- <div class="swiper-btn">
-				<div class="swiper-button-prev">
-					<img src="img/svg/arrow_left.svg" alt="img">
-				</div>
+			<div class="swiper-top">
+				<div class="swiper-button-prev"></div>
 				<div class="swiper-pagination"></div>
-				<div class="swiper-button-next">
-					<img src="img/svg/arrow_right.svg" alt="img">
-				</div>
-			</div> -->
+				<div class="swiper-button-next"></div>
+			</div>
+			<div class="swiper-dots">
+				<div class="swiper-dot active" data-index="0"></div>
+				<div class="swiper-dot" data-index="1"></div>
+				<div class="swiper-dot" data-index="2"></div>
+			</div>
 		</div>
 		<!-- <div class="home-content">
 			<div class="home-title">inAut GmbH</div>
@@ -189,23 +179,53 @@
 	<!-- our-customers -->
 	<div class="our-customers">
 		<div class="container">
-			<!-- <div class="our-customer-slider"> -->
-				<div class="home-title current-title">Unsere Kunden</div>
-				<div class="our-customers-content img-cover">
-					<h3 class="our-customers-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.» </h3>
-					<div class="home-title">Hans Muster, Winterthur</div>
+			<div class="our-customer-slider swiper-container mySwiper2">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="home-title current-title">Unsere Kunden</div>
+						<div class="our-customers-content img-cover">
+							<h3 class="our-customers-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.» </h3>
+							<div class="home-title">Hans Muster, Winterthur</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="home-title current-title">Unsere Kunden</div>
+						<div class="our-customers-content markus">
+							<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
+							<div class="home-title">Markus Löffel, Gerber macht’s</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="home-title current-title">Unsere Kunden</div>
+						<div class="our-customers-content img-cover">
+							<h3 class="our-customers-title our-customers-heading">«Die Zusammenarbeit mit inAut zeichnet sich durch ein durchdachtes Konzept, gepaart mit einem pragmatischen, einfachen und unkomplizierten Vorgehen aus. Bei Problemen haben wir jederzeit einen festen Ansprechpartner, welcher uns schnell, kompetent und mit viel Fachwissen unterstützt. Ihre Klienten führt die inAut mit viel Geschick, Fingerspitzengefühl und grossem Engagement zum individuellen Erfolg.» </h3>
+							<div class="home-title">Stephan Zigerli, WBF ISCeco</div>
+						</div>
+					</div>
 				</div>
-				<div class="home-title current-title">Unsere Kunden</div>
-				<div class="our-customers-content markus">
-					<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
-					<div class="home-title">Markus Löffel, Gerber macht’s</div>
-				</div>
-				<div class="home-title current-title">Unsere Kunden</div>
-				<div class="our-customers-content img-cover">
-					<h3 class="our-customers-title our-customers-heading">«Die Zusammenarbeit mit inAut zeichnet sich durch ein durchdachtes Konzept, gepaart mit einem pragmatischen, einfachen und unkomplizierten Vorgehen aus. Bei Problemen haben wir jederzeit einen festen Ansprechpartner, welcher uns schnell, kompetent und mit viel Fachwissen unterstützt. Ihre Klienten führt die inAut mit viel Geschick, Fingerspitzengefühl und grossem Engagement zum individuellen Erfolg.» </h3>
-					<div class="home-title">Stephan Zigerli, WBF ISCeco</div>
-				</div>
-			<!-- </div> -->
+				<div class="swiper-button-next"></div>
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-pagination"></div>
+			</div>
 		</div>
 	</div>
 </main>
+
+
+<!--
+<div class="swiper-container mySwiper">
+	<div class="swiper-wrapper">
+	  <div class="swiper-slide">Slide 1</div>
+	  <div class="swiper-slide">Slide 2</div>
+	  <div class="swiper-slide">Slide 3</div>
+	  <div class="swiper-slide">Slide 4</div>
+	  <div class="swiper-slide">Slide 5</div>
+	  <div class="swiper-slide">Slide 6</div>
+	  <div class="swiper-slide">Slide 7</div>
+	  <div class="swiper-slide">Slide 8</div>
+	  <div class="swiper-slide">Slide 9</div>
+	</div>
+	<div class="swiper-button-next"></div>
+	<div class="swiper-button-prev"></div>
+	<div class="swiper-pagination"></div>
+  </div> -->
